syntax = "proto3";

package datawritemetadata;

message Integration_Time_Metadata {
  repeated SequenceType sequences = 1;
  uint32 nave = 1;
  uint32 last_seqn_num = 2;
  bool scan_flag  = 3;
  double integration_time  = 4;

  message SequenceType {
    repeated RXChan rxchannel = 1;
    repeated uint32 blanks = 2;

    message RXChan {
      uint32 frang = 1;
      uint32 nrang = 2;
      repeated Beam beams = 3;
      bool rx_only = 4;
      uint32 pulse_len = 5;
      uint32 rsep = 6;
      uint32 pulse_spacing = 7;
      uint32 rxfreq = 8;
      repeated PulseTable ptab = 9;
      repeated LagTable ltab = 10;
      string comment_buffer = 11;
      bool acf = 12;
      bool xcf = 13;
      bool intacf = 14;

      message Beam {
      uint32 beamnum = 1;  // no channel phase data because beamforming already occurred
      double beamazimuth = 2;
      }

      message PulseTable {  // length = length of sequence
      repeated uint32 pulse_position = 1;
      }

      message LagTable {
      repeated Lag lag = 1;

        message Lag { // each Lag must have 2 pulse positions
          repeated uint32 pulse_position = 1;
          uint32 lag_num = 2;
        }
      }
    }
  }
}